test/good/t0018.zls

let hybrid model () = y where
  rec
      init y = -.1.0
  and
      automaton
      | Apart ->
          do
            der y = 1.0
          until (up(y)) then Together
      | Together ->
          do
            der y = -1.0
          done

